--- a/KADAI1.html
+++ b/KADAI1.html
@@ -10,9 +10,9 @@
     <script src="https://kit.fontawesome.com/e607b86931.js" crossorigin="anonymous"></script>
 
     <!-- CSSファイルの読み込み -->
-    <link rel="stylesheet" href="1-9-2.css" />
+    <link rel="stylesheet" href="KADAI1.css" />
 
-    <title>1-9　演習問題</title>
+    <title>課題1提出用</title>
   </head>
 
   <body>
